[gd_scene load_steps=8 format=3 uid="uid://dc7rym1bsnw6c"]

[ext_resource type="Texture2D" uid="uid://c8gvxv54ldop4" path="res://Ucup/Screenshot 2025-08-02 001149.png" id="1_rdqbe"]
[ext_resource type="LabelSettings" uid="uid://b8401s27ryjpf" path="res://Skillname.tres" id="2_cuq1h"]
[ext_resource type="Script" uid="uid://b0w1ske2f6qs6" path="res://LoopSkill.gd" id="2_o1ytc"]
[ext_resource type="Texture2D" uid="uid://ddcnl5brlsv0a" path="res://Ucup/Screenshot 2025-08-02 134929.png" id="3_2y6h0"]
[ext_resource type="Texture2D" uid="uid://cn6fpghaepx4r" path="res://Ucup/Screenshot 2025-05-22 211705.png" id="4_mnrlg"]
[ext_resource type="LabelSettings" uid="uid://da8vroblsimmc" path="res://button.tres" id="5_pnod4"]
[ext_resource type="PackedScene" uid="uid://dxm3s4b6ch80n" path="res://ui base/skill_edit.tscn" id="7_qgi4a"]

[node name="TextureRect" type="TextureRect" node_paths=PackedStringArray("skill_name", "cost_label", "container", "ctrl", "ctrl1")]
self_modulate = Color(0.333599, 0.18812, 0.999982, 1)
anchors_preset = -1
anchor_right = 0.234
anchor_bottom = 0.169
offset_right = 0.47998
offset_bottom = 10.32
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_rdqbe")
script = ExtResource("2_o1ytc")
skill_name = NodePath("Control/Skill")
cost_label = NodePath("Control/Mana Cost")
SEreso = ExtResource("7_qgi4a")
container = NodePath("Control2/ScrollContainer/VBoxContainer")
ctrl = NodePath("Control")
ctrl1 = NodePath("Control2")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Skill" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.038
anchor_right = 0.397
anchor_bottom = 0.568
offset_top = -0.0160003
offset_right = -0.100006
offset_bottom = 0.0239944
text = "Skill Name"
label_settings = ExtResource("2_cuq1h")
autowrap_mode = 2

[node name="Mana Cost" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.795
anchor_right = 0.327
anchor_bottom = 0.97
offset_top = 0.0599976
offset_right = -0.100006
offset_bottom = -0.0400085
text = "Mana Cost ="
label_settings = ExtResource("2_cuq1h")

[node name="add up" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.417
anchor_top = 0.106
anchor_right = 0.55
anchor_bottom = 0.409
offset_left = -0.100006
offset_top = 0.00799942
offset_bottom = 0.0119972
texture_normal = ExtResource("3_2y6h0")
texture_pressed = ExtResource("1_rdqbe")
texture_hover = ExtResource("4_mnrlg")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Control/add up"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "add up"
label_settings = ExtResource("5_pnod4")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="add down" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.417
anchor_top = 0.591
anchor_right = 0.55
anchor_bottom = 0.894
offset_left = -0.100006
offset_top = -0.012001
offset_bottom = -0.00801086
texture_normal = ExtResource("3_2y6h0")
texture_pressed = ExtResource("1_rdqbe")
texture_hover = ExtResource("4_mnrlg")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Control/add down"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "add down"
label_settings = ExtResource("5_pnod4")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="move up" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.617
anchor_top = 0.106
anchor_right = 0.75
anchor_bottom = 0.409
offset_left = -0.100006
offset_top = 0.00799942
offset_right = -1.52588e-05
offset_bottom = 0.0119972
texture_normal = ExtResource("3_2y6h0")
texture_pressed = ExtResource("1_rdqbe")
texture_hover = ExtResource("4_mnrlg")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Control/move up"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "move up"
label_settings = ExtResource("5_pnod4")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="move down" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.617
anchor_top = 0.591
anchor_right = 0.75
anchor_bottom = 0.894
offset_left = -0.100006
offset_top = -0.012001
offset_right = -1.52588e-05
offset_bottom = -0.00801086
texture_normal = ExtResource("3_2y6h0")
texture_pressed = ExtResource("1_rdqbe")
texture_hover = ExtResource("4_mnrlg")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Control/move down"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "move down"
label_settings = ExtResource("5_pnod4")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="edit" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.817
anchor_top = 0.106
anchor_right = 0.95
anchor_bottom = 0.409
offset_left = -0.100006
offset_top = 0.00799942
offset_bottom = 0.0119972
texture_normal = ExtResource("3_2y6h0")
texture_pressed = ExtResource("1_rdqbe")
texture_hover = ExtResource("4_mnrlg")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Control/edit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "edit"
label_settings = ExtResource("5_pnod4")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="delete" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.817
anchor_top = 0.591
anchor_right = 0.95
anchor_bottom = 0.894
offset_left = -0.100006
offset_top = -0.012001
offset_bottom = -0.00801086
texture_normal = ExtResource("3_2y6h0")
texture_pressed = ExtResource("1_rdqbe")
texture_hover = ExtResource("4_mnrlg")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Control/delete"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "delete"
label_settings = ExtResource("5_pnod4")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Control2" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.032
anchor_top = 0.098
anchor_right = 0.787
anchor_bottom = 0.894
offset_left = 0.400001
offset_top = 1.064
offset_right = -0.0999908
offset_bottom = -0.00801086
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 2

[node name="edit" type="TextureButton" parent="Control2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.817
anchor_top = 0.106
anchor_right = 0.95
anchor_bottom = 0.409
offset_left = -0.100006
offset_top = 0.00799942
offset_bottom = 0.0119972
texture_normal = ExtResource("3_2y6h0")
texture_pressed = ExtResource("1_rdqbe")
texture_hover = ExtResource("4_mnrlg")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Control2/edit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "edit"
label_settings = ExtResource("5_pnod4")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="Control/add up" to="." method="_on_add_up_pressed"]
[connection signal="pressed" from="Control/add down" to="." method="_on_add_down_pressed"]
[connection signal="pressed" from="Control/move up" to="." method="_on_move_up_pressed"]
[connection signal="pressed" from="Control/move down" to="." method="_on_move_down_pressed"]
[connection signal="pressed" from="Control/edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="Control/delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="Control2/edit" to="." method="_on_edit1_pressed"]
